--- a/apps/ng-mailer/src/app/app.component.html
+++ b/apps/ng-mailer/src/app/app.component.html
@@ -11,7 +11,7 @@
     <section>
       <mat-form-field appearance="fill">
         <mat-label>FROM</mat-label>
-        <input [(ngModel)]="mail.from" matInput>
+        <input [(ngModel)]="mail.from" matInput disabled>
       </mat-form-field>
 
       <mat-form-field appearance="fill">
